# paromat

./: .gitignore
kotlin/: build.gradle  settings.gradle
kotlin/src/commonMain/kotlin/lib/humanoid/paromat/: Paromat.kt
kotlin/src/commonMain/kotlin/lib/humanoid/paromat/interpreter/: Evaluator.kt  Interpreter.kt
kotlin/src/commonMain/kotlin/lib/humanoid/paromat/lexer/: Lexer.kt
kotlin/src/commonMain/kotlin/lib/humanoid/paromat/node/: Nodes.kt
kotlin/src/commonMain/kotlin/lib/humanoid/paromat/parser/: Parser.kt
kotlin/src/commonMain/kotlin/lib/humanoid/paromat/token/: Tokens.kt
python/: lexer.py  nodes.py  paromat.py  pyproject.toml  token.py  tree.py  values.py
python/paromat/: interpreter.py  lexer_old.py  node_parser.py  paromat.py  token.py
