[tool.poetry]
name = "paromat"
version = "0.0.1"
description = "A library for solving math expressions"
authors = ["Jugal Mistry <jugalmistry99@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
